<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KeynoteActivity" >

    <TextView
        android:id="@+id/label_keynote_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/keynote"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/keynote_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_keynote_description"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/label_keynote_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keynote_description"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/date"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/keynote_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_keynote_date"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/label_keynote_speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keynote_date"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/speaker"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/keynote_speaker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_keynote_speaker"
        android:paddingLeft="10dp" />

    <Switch
        android:id="@+id/switchState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keynote_speaker"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:paddingTop="15dp"
        android:textOff="@string/checkout"
        android:textOn="@string/checkin"
        />

</RelativeLayout>